// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkBox /> by default matches with snapshot 1`] = `
<a
  className="sc-htpNat gkYezB"
  href="#"
>
  <div
    className="sc-bZQynM czKSIP"
  >
    <div
      className="sc-bwzfXH iTkUFj sc-bxivhb gjdtfU"
    >
      <div
        className="sc-bwzfXH fhbWMi"
      >
        <span
          className="k-u-color-font1 k-u-size-default k-u-weight-regular"
          style={
            Object {
              "lineHeight": 1,
            }
          }
        >
          My title
        </span>
      </div>
      
    </div>
    <div
      className="sc-EHOje gktRhF"
    >
      <svg
        className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
        height="5.64"
        viewBox="0 0 6 6"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Arrow
        </title>
        <path
          d="M6 0H0v6h2V2h4z"
        />
      </svg>
    </div>
  </div>
</a>
`;

exports[`<LinkBox /> with some props matches with snapshot 1`] = `
<a
  className="sc-htpNat gkYezB"
  href="#foobar"
  rel="noopener"
  target="_blank"
>
  <div
    className="sc-bZQynM czKSIP"
  >
    <div
      className="sc-ifAKCX hbaqOm k-u-hidden@xs-down--important"
    />
    <div
      className="sc-bwzfXH iTkUFj sc-bxivhb gjdtfU"
    >
      <div
        className="sc-bwzfXH dNghbn"
      >
        <span
          className="k-u-color-font1 k-u-size-default k-u-weight-regular"
          style={
            Object {
              "lineHeight": 1,
            }
          }
        >
          Lorem ipsum
        </span>
      </div>
      <span
        className="k-u-color-font1 k-u-size-tiny k-u-weight-light"
        style={
          Object {
            "lineHeight": 1.3,
          }
        }
      >
        In enim justo, rhoncus ut,
      </span>
    </div>
    <div
      className="sc-EHOje gktRhF"
    >
      <svg
        className="k-ArrowIcon k-ArrowIcon--right k-ButtonIcon__svg"
        height="5.64"
        viewBox="0 0 6 6"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Arrow
        </title>
        <path
          d="M6 0H0v6h2V2h4z"
        />
      </svg>
    </div>
  </div>
</a>
`;
